section & paragraph styles change

--- a/posejdon.html
+++ b/posejdon.html
@@ -22,7 +22,7 @@
         <header id="top">
             <h1 class="tsunami-header">Kizo to posejdon</h1>
         </header>
-            <section>
+            <section class="section-posejdon">
                 <article>
                     <h2>Tsunami</h2>
                     <P>Jestem królem bangerów, wpływam na szerokie wody</br>
