New background color of H2 & changes in css

--- a/posejdon.html
+++ b/posejdon.html
@@ -24,7 +24,7 @@
         </header>
             <section class="section-posejdon">
                 <article>
-                    <h2>Tsunami</h2>
+                    <h2 class="monster-header">Tsunami to jest z nami</h2>
                     <P>Jestem królem bangerów, wpływam na szerokie wody</br>
                         <img src="kizo-smacznej-kawusi-jebac-kapusi.jpg" alt="kizo-smacznej-kawusi"></br>
                         <a href="https://www.youtube.com/watch?v=lDV6UZL8DfQ&ab_channel=KizoMyToSukces"> 0-58 kierunkowy Moje miasto, narkotyk</a></br>
