--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         <section>
             <h2 class="hotpink-header"> To będzie mój dziennik </h2>
             <article>
-                <P id="text-tomato">Aktualnie jestem na module drugim mojej przygody z programowaniem, ale jestem dobrej myśli.
-                <br> <a href="#lorem"> Jestem bardzo ciekaw jak to będzie dalej wyglądać i ile się nauczę</a>
+                <P id="text-tomato">Aktualnie jestem na module drugim mojej przygody z programowaniem, ale jestem dobrej
+                    myśli.
+                    <br> <a href="#lorem"> Jestem bardzo ciekaw jak to będzie dalej wyglądać i ile się nauczę</a>
                     Chcę być obrzydliwie bogaty więc programowanie może mi w tym pomóc
                     <a href="https://www.youtube.com/"> (przymajmniej mam taką nadzieje)</a>
-                   
+
                 </P>
             </article>
         </section>
@@ -44,12 +45,12 @@
             <article id="lorem">
                 <h3> Tu będzie fajny piesek</h3>
                 <img src="The-Siberian-Husky-HP-long.jpg" alt="Mały piesek husky">
-                <p> Ciekawość to pierwszy stopień do piekła michałek 
-                  Uważaj lepiej bo będzie lipa<br>
+                <p> Ciekawość to pierwszy stopień do piekła michałek
+                    Uważaj lepiej bo będzie lipa<br>
                 </p>
             </article>
         </section>
-        
+
     </main>
     <footer>
         Dziennik Michała gawrona 2021 <a href="#top">Wróc na szczyt ziomuś</a>
