--- a/posejdon.html
+++ b/posejdon.html
@@ -22,16 +22,17 @@
         <header id="top">
             <h1 class="tsunami-header">Kizo to posejdon</h1>
         </header>
-            <section class="section-posejdon">
-                <article>
-                    <h2 class="monster-header">Tsunami to jest z nami</h2>
-                    <P>Jestem królem bangerów, wpływam na szerokie wody</br>
-                        <img src="kizo-smacznej-kawusi-jebac-kapusi.jpg" alt="kizo-smacznej-kawusi"></br>
-                        <a href="https://www.youtube.com/watch?v=lDV6UZL8DfQ&ab_channel=KizoMyToSukces"> 0-58 kierunkowy Moje miasto, narkotyk</a></br>
-                        
-                    </P>
-                </article>
-                </section>
+        <section class="section-posejdon">
+            <article>
+                <h2 class="monster-header">Tsunami to jest z nami</h2>
+                <P>Jestem królem bangerów, wpływam na szerokie wody</br>
+                    <img src="kizo-smacznej-kawusi-jebac-kapusi.jpg" alt="kizo-smacznej-kawusi"></br>
+                    <a href="https://www.youtube.com/watch?v=lDV6UZL8DfQ&ab_channel=KizoMyToSukces"> 0-58 kierunkowy
+                        Moje miasto, narkotyk</a></br>
+
+                </P>
+            </article>
+        </section>
     </main>
     <footer>
         Dziennik Michała gawrona 2021 <a href="#top">Wróc na szczyt ziomuś</a>
