--- a/html/nauka-html.html
+++ b/html/nauka-html.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michał Gawron to król</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="../css/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="nauka-html.html">Nauka html</a>
-            <a href="posejdon.html">Posejdon</a>
+        <nav class="navigation">
+            <a class="navigation__link navigation__link--homepage"  href="index.html">Strona główna</a>
+            <a class="navigation__link" href="nauka-html.html">Nauka html</a>
+            <a class="navigation__link" href="posejdon.html">Posejdon</a>
         </nav>
     </header>
     <main>
