--- a/html/posejdon.html
+++ b/html/posejdon.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kizo to posejdon</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="../css/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="../css/style.css" rel="stylesheet" type="text/css">
 
 </head>
 
-<body>
+<body class="page">
     <header>
-        <nav>
-            <a href="index.html">Strona główna</a>
-            <a href="nauka-html.html">Nauka html</a>
-            <a href="posejdon.html">Posejdon</a>
+        <nav class="navigation">
+            <a class="navigation__link navigation__link--homepage" href="index.html">Strona główna</a>
+            <a class="navigation__link" href="nauka-html.html">Nauka html</a>
+            <a class="navigation__link" href="posejdon.html">Posejdon</a>
         </nav>
     </header>
     <main>
@@ -26,7 +27,7 @@
             <article>
                 <h2 class="monster-header">Tsunami to jest z nami</h2>
                 <P>Jestem królem bangerów, wpływam na szerokie wody</br>
-                    <img src="kizo-smacznej-kawusi-jebac-kapusi.jpg" alt="kizo-smacznej-kawusi"></br>
+    
                     <a href="https://www.youtube.com/watch?v=lDV6UZL8DfQ&ab_channel=KizoMyToSukces"> 0-58 kierunkowy
                         Moje miasto, narkotyk</a></br>
 
@@ -37,7 +38,7 @@
     <footer>
         Dziennik Michała gawrona 2021 <a href="#top">Wróc na szczyt ziomuś</a>
     </footer>
-    <script src="posejdon.js">
+    <script src="../js/posejdon.js">
 
     </script>
 </body>
